# ai-context-infrastructure

./: README.md  pyproject.toml
.agentic/axioms/: universal.md
.agentic/axioms/domains/: ai-agents.md  engineering.md  research-analysis.md  security.md
.agentic/axioms/jobs/: example-job.md
.agentic/axioms/skills/: axiom-creator.md  check-inline-citations.md  for-and-against.md  frontend-slides.md  multi-views.md  perplexity-search.md  risk-analysis.md  skill-creator.md  verify-citations.md
.agentic/guardrails/: dangerous-actions.md  doctrine-mutation.md
.agentic/outputs/: creator-result.md  doctrine-update-summary.md  implementation-summary.md
.agentic/router/: routes.yaml  routing-rules.md
.agentic/skills/axiom-creator/: axioms.md  checklist.md  output.md  skill.md
.agentic/skills/check-inline-citations/: axioms.md  checklist.md  output.md  skill.md
.agentic/skills/for-and-against/: axioms.md  checklist.md  output.md  skill.md
.agentic/skills/frontend-slides/: axioms.md  checklist.md  output.md  skill.md
.agentic/skills/multi-views/: axioms.md  checklist.md  output.md  skill.md
.agentic/skills/perplexity-search/: axioms.md  checklist.md  output.md  skill.md
.agentic/skills/risk-analysis/: axioms.md  checklist.md  output.md  skill.md
.agentic/skills/skill-creator/: axioms.md  checklist.md  output.md  skill.md
.claude-plugin/: marketplace.json  plugin.json
adapters/claude-code/: CLAUDE.md
scripts/: install_claude.py  validate_template.py
tests/: __init__.py  test_creator_contracts.py  test_install_claude.py  test_routes_yaml.py
(+14 files in other folders)
