[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-context-infrastructure"
version = "1.0.0"
description = "A portable, reusable AI context infrastructure with Claude Code adapter"
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest>=7.0", "pyyaml>=6.0"]
